# BetterAlgebraSystem

./: .gitignore  CMakeLists.txt  MuchMoreThanCAS.exe.stackdump  README.md  build.sh  error.h  main.c  number_representation.h  parser.c  parser.h  print.c
Debug/: main.d  makefile  number_representation.d  parser.d  print.d  subdir.mk
src/: addition.c  addition.h  calculate.c  calculate.h  echo.c  echo.h  error.h  main.c  math.h  mem.h  number_representation.c  number_representation.h  parser.c  parser.h  print.h
tests/: main.c  test.c  testparser.c  testparser.h
